# depod

./: .env.example  .gitignore  Cargo.toml
.sqlx/: query-1be86e1dd9b8db4d85deefa899017eb7af149d4629d6c9d05f01a94785dfe4dc.json  query-320a35d3285a253f16995e83d43fabe2dd22655713671d4b7634f80fd4d5dce0.json  query-4c4ad55764efcb18e0731bffc8d74e2776126647c19aeb3d6c2f2ca464de828f.json  query-4cc5aa75609078455e076f9120fb76202b2fe36316bbab7efaa5cc39850ccbdc.json  query-541927f9310ae04b54405ac80c0173642d880d36b1a24738b23488458a1bfa22.json  query-644fa73a92496f64105e01020e39f45298505947b00d4528edc9651893004e2e.json  query-677175a8d01648fb9f33d3d4a0eacee8d09d87c8fb532bf87313be43d0deb901.json  query-678351304b5d9d4eed024444465c2624c33eaf8000611703bd1f17431a61a92a.json  query-8229264402f9a66de9395b39e8dd41bac1ca8a02b04c6f04cd5af49601d694a2.json  query-8729365f26644f60916c7912bb35172f0413554fc2b82e286c7b01603e91535b.json  query-8d3b9712aa201a3ff4929b082aafd28ddb99bee7c0c7e54570a326ca21f5df03.json  query-94a480dff1573340e8ceb058de9bf283357eb419f7237e30857561b2b8ddd5ac.json  query-af6ed6deb69d66687c4971cf9a9dde98977c495284e878b79ae9a90bf9e4dbc4.json  query-b325df97c3827cd9e7915448c9624b17c1f88f09eae1514254a355f4cb822aa7.json  query-c2a71bbc977a30b88b268dc3570f963023e6612eb912d7eaf9e1af218e07cca6.json  query-cffe7aea8529141373d7d11399b13819a4e52cef44f6b44320d9ce666189d729.json  query-d9607e70e565311d1e8b9ee57b889e831c2370d006dabcbcd94a1f8593590e6f.json  query-d97625f8438c41065774ab4242966831ef6c0043d6358fa85a7ed565aa341258.json  (+6 more)
migrations/: 20260717123817_users.sql  (+13 more)
src/: backend.rs  (+1 more)
(+38 files in other folders)
