[package]
name = "depod"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = { version = "4.14.0", features = ["rustls-0_23"] }
anyhow = "1.0.104"
argon2 = { version = "0.5.3", features = ["std"] }
bitflags = "2.13.1"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.2", features = ["derive"] }
directories = "6.0.0"
dotenvy = "0.15.7"
futures-util = "0.3.32"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
paste = "1.0.15"
rustls = "0.23.42"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "uuid", "chrono", "macros", "runtime-tokio"] }
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
toml = "1.1.3"
uuid = { version = "1.24.0", features = ["serde"] }
